--- a/templates/edt/devueltas.html
+++ b/templates/edt/devueltas.html
@@ -1,11 +1,11 @@
 {% extends  "edt/base.html" %}
 {% load staticfiles %}
-
 {% block contenido %}
-<h4>detalle de devolución de horas</h4>
-<div id="devuelve" class="panel panel-default"><p>El funcionario {{horas.usuario.nombre}} {{horas.usuario.apellido1}} a devuelto el dia {{horas.fecha|date:"d M, Y"}} la cantidad de {{horas.horas_devueltas}} horas.</p></div>
-
-
-
-
+<div class="exito">
+		<!-- <img src="/media/tick.png" /> -->
+		<h1>Resumen de horas devueltas</h1>
+		<p>Funcionario :{{permiso.usuario.nombre}}  {{permiso.usuario.apellido1}}  {{permiso.usuario.apellido2}} </p>
+		<p>Horas Devueltas : {{horasdevueltas}}</p>
+		<p></p>
+	</div>
 {% endblock %}
