--- a/templates/edt/bfuncionario.html
+++ b/templates/edt/bfuncionario.html
@@ -1,6 +1,32 @@
 {% extends "edt/base.html" %}
 {% load staticfiles %}
 {% block contenido %}
+
+<div class='form-group'>
+    <div class="row">                 
+        <div class="col-lg-9">    
+                                                                 
+        </div>                        
+        <div class="col-lg-1">
+            <a href="#" class="btn btn-info btn-block">
+                <span class="glyphicon glyphicon-list-alt"></span>
+            </a>
+        </div>                        
+        {% if 1 %}
+        <div class="col-lg-1">                            
+            <a href="#" class="btn btn-info btn-block">
+                <span class="glyphicon glyphicon-plus"></span>
+            </a>                          
+        </div>
+        {% endif %}
+        <div class="col-lg-1">                            
+            <a href="/reporte_personas_pdf/" class="btn btn-info btn-block">
+                <span class="glyphicon glyphicon-file"></span>
+            </a>                          
+        </div>                                                    
+    </div>
+</div>
+
 <h4>Bitacora General</h4>
 <div>
 
