--- a/templates/edt/permisolst.html
+++ b/templates/edt/permisolst.html
@@ -36,7 +36,7 @@
   </form>
  </div> 
  {% endif %}
-<div class="pxp" ><h4>permisos pendientes de aprovación <!-- Secundaria : {{foliosecundaria}} Primaria {{folioprimaria}} CPE {{foliocpe}} --> </h4>
+<div class="pxp" ><h4>permisos pendientes de aprobación <!-- Secundaria : {{foliosecundaria}} Primaria {{folioprimaria}} CPE {{foliocpe}} --> </h4>
 	
 	<ul class="list-group">
 	{% for permiso in permisos_list %}
@@ -62,8 +62,8 @@
       {% endif %}
 
       {% if bitacora.permiso.id == permiso.id and bitacora.actividad.id == 2 and bitacora.usuario.cargo.id == 15 %} <span class="badge2"> CPE </span>
-      {% endif %}
-
+      {% endif %}       
+    
      {% endfor %}
            
     </a>		
